# kurDISTANCE

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
kurDISTANCE/: __init__.py
kurDISTANCE/src/: elastic_cmodule.c  lock_step_cmodule.c  math_utils.c  math_utils.h  trend_based_cmodule.c
src/: elastic_cmodule.c  lock_step_cmodule.c  math_utils.c  math_utils.h  trend_based_cmodule.c
test/: test_elastic.py  test_lock_step.py  test_trend_based.py
